app/assets/stylesheets/white_theme/tracks.scss
.asset,
.track {
  position: relative;
  overflow: hidden;
  width: 100%;
  border-bottom: 1px solid $light-gray;
  .button,
  .title {
    float: left;
  }
  .seekbar {
    clear: both;
    height: 9px;
    .loaded {
      overflow: hidden;
      height: 5px;
      padding-top: 2px;
      padding-bottom: 2px;
      background-color: #1F1D04;
    }
    .played {
      height: 5px;
      background-color: #FCA744;
    }
  }
  &:not(.open) {
    .seekbar {
      display: none;
    }
  }
  .asset_top {
    display: flex;
    div.button {
      width: 40px;
      height: 40px;
      a {
        display: block;
        width: 40px;
        height: 40px;
        &:hover {
          background-position: -51px 0;
        }
      }
      .sprites-play {
        margin-left: 2px;
        width: 40px;
        height: 40px;
        position: relative;
        top: -5px;
        left: -5px;

      }
      .sprites-pause {
        margin-left: 2px;
        width: 40px;
        height: 40px;
        position: relative;
        top: -5px;
        left: -5px;

      }
    }
    div.title {
      overflow: hidden;
      width: auto;
      height: 35px;
      padding-top: 8px;
      padding-left: 3px;
      flex-grow: 1;
      box-sizing: border-box;
      .title_left_column {
        float: left;
        width: auto;
      }
      .title_right_column {
        position: relative;
        float: right;
        height: 100%;
        .counter {
          font-size: 15px;
          font-weight: bold;
          position: absolute;
          right: 14px;
          bottom: 22px;
          text-align: right;
        }
        div.time {
          font-size: 12px;
          position: absolute;
          right: 15px;
          bottom: 10px;
          display: block;
          text-align: right;
          color: #8C8C8C;
        }
      }
      a {
        font-size: 15px;
        text-decoration: none;

        -webkit-font-smoothing: antialiased;
      }
      .title_left_column_bottom {
        clear: both;
        a {
          -webkit-font-smoothing: subpixel-antialiased;
        }
      }
      span.by {
        font-size: 11px;
      }
      a.artist {
        font-size: 11px;
      }
      span.track_play,
      span.latest,
      span.popular {
        font-size: 12px;
        margin-left: 20px;
      }
      .listen_count {
        font-size: 11px;
        font-weight: bold;
        position: relative;
        top: -3px;
        margin-left: 5px;
        color: $orange;
      }
    }
    &.even {
      div.button,
      div.title {
        background-color: $box_background_even;
      }
    }
    &.hover,
    &.open {
      div.button,
      div.title {
        background-color: #EEEEEE;
      }
    }
    &.playing {
      div.button,
      div.title {
        background-color: #EEEEEE;
      }
      div.button {
        a {
          background-position: -100px 0;
        }
      }
      div.title {
        div.counter {
          opacity: .99;
        }
        div.time {
          color: #FECDA6;
        }
      }
    }
  }
  .tracks_reveal {
    margin-top: 10px;
    .tracks_reveal_top {
      display: flex;
      .alonetoner {
        width: 50px;
        height: 50px;
        margin-right: 10px;
        a {
          overflow: hidden;
          width: 50px;
          height: 50px;
        }
        a img {
          width: 50px;
          height: 50px;
          border: 1px solid #9FA28D;
          &.no_border {
            border: none;
          }
        }
      }
      .description {
        font-size: 14px;
        line-height: 17px;
        padding-top: 5px;
        margin-right: 60px;
        .user_description {
          font-family: $serif-font;
          p {
            margin-bottom: 1em;
          }
        }
        p img {
          max-width: 290px;
        }
        p {
          margin-top: 0;
          margin-bottom: 0;
        }
        .description_more p  a {
          font-size: 12px!important;
          font-weight: bold!important;
          margin-bottom: 1em;
          text-decoration: none!important;
        }
        .stats {
          font-size: 10px;
          line-height: 14px;
        }
      }
    }
    .tabbed_input {
      width: 360px;
      height: 20px;
      margin-left: 10px;
    }
    .home_page_link {
      text-align: right;
    }
    .comment_waiting {
      font-size: 14px;
      font-weight: bold;
      position: absolute;
      bottom: 10px;
      left: 19px;
      text-align: center;
      color: $orange;
      background-color: $tab_box_silver;
      div.ajax_success,
      div.ajax_fail {
        line-height: 30px;
        height: 30px;
        text-indent: 35px;
        background: transparent image-url('icons/ok.png') no-repeat top left;
      }
      div.ajax_success {
        color: $green;
      }
      div.ajax_fail {
        background: transparent image-url('icons/not_ok.png') no-repeat top left;
      }
    }
    .no_border {
      border: none;
    }

    .comment_track {
      clear: both;
      margin-top: 20px;
      textarea {
        box-sizing: border-box;
        max-width: 100%;
        margin-top: 10px;
        margin-bottom: 15px;
      }
      input.comment_submit {
        @include default_button();
        float: right;
        background-color: transparent;
      }
    }
    
    .admin {
      font-size: 10px;
      line-height: 12px;
      padding-top: 20px;
      color: #666666;
    }
    .show_to_admin {
      display: none;
      float: none;
      clear: both;
    }
    .show_to_admin_or_owner {
      display: none;
    }
    .track_links {
      float: right;
      margin-top: 15px;
      margin-bottom: 30px;
      a {
        float: right;
        margin-left: 4px;
        @include default_button();
      }
    }
  }
  

}

#single_track {
  h1 {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 10px;
    text-shadow: none;
  }
  #track_details {
    position: relative;
    display: block;
    padding: 15px 15px 15px 20px;
    background-color: $playlist_box_silver;
    p img {
      max-width: 385px;
    }
  }
  textarea {
    width: 380px;
    margin-top: 10px;
  }
  .seekbar {
    display: block;
    background-color: $playlist_box_silver;
    &:not(.initialized) {
      -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
              box-sizing: border-box;
      border-top: 1px solid $body_background_color;
    }
  }
  &.descriptionless {
    .seekbar {
      background-color: $tab_box_silver;
    }
  }
}

div.track_options {
  display: relative;
  width: 100%;
  height: 32px;
}

#radio_tracks {
  margin-bottom: 3px;
}



#single_track .track_links {
  left: -9px;
}
.asset.played {
  opacity: .2;
}

.asset.playing,
.asset.hover {
  opacity: .99;
  .asset_top {
    background-color: #EFEFEF;
  }
}

